test/Fail/Issue1296.agda
open import Issue1296.SolvedMeta

-- Expected error:
