test/Fail/Issue1296.err
Issue1296.agda:1.1-33: error: [SolvedButOpenHoles]
Module cannot be imported since it has open interaction points
(consider adding {-# OPTIONS --allow-unsolved-metas #-} to this
module)
when scope checking the declaration
  open import Issue1296.SolvedMeta
